syntax = "proto3";

package br.com.eventhorizon.mywallet.proto;

option java_outer_classname = "AssetProto";
option java_multiple_files = false;
option java_package = "br.com.eventhorizon.mywallet.ms.assets.proto";

option optimize_for = LITE_RUNTIME;

message AssetMessage {
  string id = 1;
  string shortName = 2;
  string longName = 3;
  string strategy = 4;
  string type = 5;
  map<string, string> properties = 6;
}
